# Gods-Wisdom

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: CODEOWNERS  FUNDING.yml
crates/gw-cli/: Cargo.toml
crates/gw-cli/src/: main.rs
crates/gw-core/: Cargo.toml
crates/gw-core/src/: lib.rs
crates/gw-tui/: Cargo.toml
crates/gw-tui/src/: main.rs
src/: main.rs
