[package]
name = "gw-cli"
version.workspace = true
edition.workspace = true

# This produces a binary named 'gw' instead of 'gw-cli', so users 
# type 'gw get "John 3:16"' rather than 'gw-cli get "John 3:16"'.

[[bin]]
name = "gw"
path = "src/main.rs"

[dependencies]
gw-core = { path = "../gw-core/" }
anyhow.workspace = true
clap.workspace = true

